build_final.log
cargo : warning: 
unused import: 
`Specificity`
At line:1 char:1
+ cargo build 
--release 2>&1 | 
Out-File -Encoding 
ascii build_final.log
+ ~~~~~~~~~~~~~~~~~~~~
~~~~~~
    + CategoryInfo    
          : NotSpeci  
  fied: (warning: u   
 nused import: `Sp    
ecificity`:String    
) [], RemoteExcep    
tion
    + FullyQualifiedE 
   rrorId : NativeCo  
  mmandError
 
 --> crates\style\src\
lib.rs:6:47
  |
6 | ...t, 
Specificity, D...
  |       ^^^^^^^^^^^
  |
  = note: `#[warn(unus
ed_imports)]` (part 
of `#[warn(unused)]`) 
on by default

warning: unused 
import: `Node`
 --> crates\style\src\
lib.rs:9:11
  |
9 | ...m::{Node, No...
  |        ^^^^

warning: unused 
import: `std::collecti
ons::HashMap`
  --> crates\style\src
\lib.rs:10:5
   |
10 | use std::collecti
ons::HashMap;
   |     ^^^^^^^^^^^^^
^^^^^^^^^^^^

warning: unreachable 
pattern
   --> crates\style\sr
c\lib.rs:387:21
    |
327 | ..." | "a" | 
"strong" | "em" | "b" 
| "i" | "u" | "code" 
| ...
    |                 
                      
           ------ 
matches all the 
relevant values
...
387 | ... | "code" => 
{
    |       ^^^^^^ no 
value can reach this
    |
    = note: `#[warn(un
reachable_patterns)]` 
(part of 
`#[warn(unused)]`) on 
by default

warning: unreachable 
pattern
   --> crates\style\sr
c\lib.rs:390:13
    |
327 | ...   
"span...mall" => {
    |       
-----...----- matches 
all the relevant 
values
...
390 | ...   "strong" 
| "b" => {
    |       
^^^^^^^^^^^^^^ no 
value can reach this

warning: unreachable 
pattern
   --> crates\style\sr
c\lib.rs:393:13
    |
327 | ...   
"span...mall" => {
    |       
-----...----- matches 
all the relevant 
values
...
393 | ...   "em" | 
"i" => {
    |       
^^^^^^^^^^ no value 
can reach this

warning: `style` 
(lib) generated 6 
warnings (run `cargo 
fix --lib -p style` 
to apply 3 
suggestions)
warning: unused 
imports: `FontWeight` 
and `Position`
 --> crates\layout\src
\lib.rs:6:37
  |
6 | ...y, Position, 
FlexDirection, 
JustifyContent, 
AlignItems, 
FontWeight};
  |       ^^^^^^^^    
                      
                   
^^^^^^^^^^
  |
  = note: `#[warn(unus
ed_imports)]` (part 
of `#[warn(unused)]`) 
on by default

warning: unused 
variable: `is_reverse`
   --> crates\layout\s
rc\lib.rs:242:13
    |
242 | ...et 
is_reverse = ...
    |       
^^^^^^^^^^ help: if 
this is intentional, 
prefix it with an 
underscore: 
`_is_reverse`
    |
    = note: `#[warn(un
used_variables)]` 
(part of 
`#[warn(unused)]`) on 
by default

warning: unused 
variable: `i`
   --> crates\layout\s
rc\lib.rs:329:14
    |
329 | ...r (i, chil...
    |       ^ help: 
if this is 
intentional, prefix 
it with an 
underscore: `_i`

warning: variants 
`CommentStart` and 
`Doctype` are never 
constructed
  --> crates\html_pars
er\src\tokenizer.rs:56
:5
   |
40 | enum State {
   |      ----- 
variants in this enum
...
56 |     CommentStart,
   |     ^^^^^^^^^^^^
...
59 |     Doctype,
   |     ^^^^^^^
   |
   = note: `State` 
has derived impls for 
the traits `Clone` 
and `Debug`, but 
these are 
intentionally ignored 
during dead code 
analysis
   = note: 
`#[warn(dead_code)]` 
(part of 
`#[warn(unused)]`) on 
by default

warning: field 
`current_token` is 
never read
  --> crates\html_pars
er\src\tokenizer.rs:69
:5
   |
66 | pub struct 
Tokenizer<'a> {
   |            
--------- field in 
this struct
...
69 |     
current_token: Opti...
   |     ^^^^^^^^^^^^^

warning: `layout` 
(lib) generated 3 
warnings (run `cargo 
fix --lib -p layout` 
to apply 3 
suggestions)
warning: 
`html_parser` (lib) 
generated 2 warnings
warning: unused 
variable: 
`max_redirects`
   --> crates\network\
src\lib.rs:157:49
    |
157 | ...r, 
max_redirects: u...
    |       
^^^^^^^^^^^^^ help: 
if this is 
intentional, prefix 
it with an 
underscore: 
`_max_redirects`
    |
    = note: `#[warn(un
used_variables)]` 
(part of 
`#[warn(unused)]`) on 
by default

warning: unused 
import: 
`ApiAccessControl`
  --> crates\js_engine
\src\interpreter.rs:13
:40
   |
13 | use crate::securi
ty::{SecurityContext, 
ApiAccessControl};
   |                  
                      
^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unu
sed_imports)]` (part 
of `#[warn(unused)]`) 
on by default

warning: unused 
import: 
`std::sync::Arc`
  --> crates\js_engine
\src\http_client.rs:10
:5
   |
10 | use 
std::sync::Arc;
   |     
^^^^^^^^^^^^^^

warning: `network` 
(lib) generated 1 
warning (run `cargo 
fix --lib -p network` 
to apply 1 suggestion)
warning: `js_engine` 
(lib) generated 2 
warnings (run `cargo 
fix --lib -p 
js_engine` to apply 2 
suggestions)
   Compiling 
browser_core v0.1.0 (C
:\Users\IJXP\Pictures\
browser\crates\browser
_core)
warning: unused 
import: `Duration`
 --> crates\browser_co
re\src\video.rs:8:17
  |
8 | use 
std::time::{Duration, 
Instant};
  |                 
^^^^^^^^
  |
  = note: `#[warn(unus
ed_imports)]` (part 
of `#[warn(unused)]`) 
on by default

warning: field 
`js_console` is never 
read
  --> crates\browser_c
ore\src\lib.rs:42:5
   |
25 | pub struct 
Browser {
   |            
------- field in this 
struct
...
42 |     js_console: 
Vec<String>,
   |     ^^^^^^^^^^
   |
   = note: 
`#[warn(dead_code)]` 
(part of 
`#[warn(unused)]`) on 
by default

warning: field 
`italic` is never read
    --> crates\browser
_core\src\lib.rs:1119:
5
     |
1114 | struct 
RenderItem {
     |        
---------- field in 
this struct
...
1119 |     italic: 
bool,
     |     ^^^^^^
     |
     = note: 
`RenderItem` has 
derived impls for the 
traits `Clone` and 
`Debug`, but these 
are intentionally 
ignored during dead 
code analysis

warning: 
`browser_core` (lib) 
generated 3 warnings 
(run `cargo fix --lib 
-p browser_core` to 
apply 1 suggestion)
   Compiling browser 
v0.1.0 (C:\Users\IJXP\
Pictures\browser)
warning: unused 
import: `Token`
 --> src\bin\test_toke
nizer.rs:3:30
  |
3 | use html_parser::{
Tokenizer, Token};
  |                   
           ^^^^^
  |
  = note: `#[warn(unus
ed_imports)]` (part 
of `#[warn(unused)]`) 
on by default

error[E0277]: 
`JsValue` doesn't 
implement 
`std::fmt::Display`
   --> src\bin\js_demo
.rs:102:48
    |
102 |         
Ok(result) => 
println!("  Result: 
{}", result),
    |                 
                      
    --   ^^^^^^ 
`JsValue` cannot be 
formatted with the 
default formatter
    |                 
                      
    |
    |                 
                      
    required by this 
formatting parameter
    |
    = help: the trait 
`std::fmt::Display` 
is not implemented 
for `JsValue`
    = note: in format 
strings you may be 
able to use `{:?}` 
(or {:#?} for 
pretty-print) instead
    = note: this 
error originates in 
the macro `$crate::for
mat_args_nl` which 
comes from the 
expansion of the 
macro `println` (in 
Nightly builds, run 
with -Z 
macro-backtrace for 
more info)

For more information 
about this error, try 
`rustc --explain 
E0277`.
error: could not 
compile `browser` 
(bin "js_demo") due 
to 1 previous error
warning: build 
failed, waiting for 
other jobs to 
finish...
warning: fields `id` 
and `name` are never 
read
  --> src\bin\benchmar
k.rs:50:19
   |
50 |     struct Item 
{ id: i32, name: 
String, value: f64 }
   |            ----  
 ^^       ^^^^
   |            |
   |            
fields in this struct
   |
   = note: `Item` has 
a derived impl for 
the trait `Clone`, 
but this is 
intentionally ignored 
during dead code 
analysis
   = note: 
`#[warn(dead_code)]` 
(part of 
`#[warn(unused)]`) on 
by default

warning: unused 
variable: `i`
   --> 
src\main.rs:401:10
    |
401 |     for (i, 
tab) in tabs.iter().en
umerate() {
    |          ^ 
help: if this is 
intentional, prefix 
it with an 
underscore: `_i`
    |
    = note: `#[warn(un
used_variables)]` 
(part of 
`#[warn(unused)]`) on 
by default

warning: unreachable 
pattern
   --> 
src\main.rs:732:9
    |
698 |         
'a'..='z' => get_char_
pattern(c.to_ascii_upp
ercase()),
    |         
--------- matches all 
the relevant values
...
732 |         'x' => 
[0, 0b100001, 
0b010010, 0b001100, 
0b010010, 0b100001, 
0, 0],
    |         ^^^ no 
value can reach this
    |
    = note: `#[warn(un
reachable_patterns)]` 
(part of 
`#[warn(unused)]`) on 
by default

warning: constant 
`ACCENT_HOVER` is 
never used
  --> src\main.rs:32:7
   |
32 | const 
ACCENT_HOVER: Color = 
Color { r: 129, g: 
140, b: 248, a: 255 
};  // Light indigo
   |       
^^^^^^^^^^^^
   |
   = note: 
`#[warn(dead_code)]` 
(part of 
`#[warn(unused)]`) on 
by default

warning: constant 
`ACCENT_WARNING` is 
never used
  --> src\main.rs:34:7
   |
34 | const 
ACCENT_WARNING: Color 
= Color { r: 251, g: 
191, b: 36, a: 255 }; 
// Amber
   |       
^^^^^^^^^^^^^^

warning: constant 
`BORDER_HOVER` is 
never used
  --> src\main.rs:44:7
   |
44 | const 
BORDER_HOVER: Color = 
Color { r: 75, g: 75, 
b: 95, a: 255 };
   |       
^^^^^^^^^^^^

warning: field `url` 
is never read
  --> src\main.rs:63:5
   |
61 | struct Tab {
   |        --- field 
in this struct
62 |     title: 
String,
63 |     url: String,
   |     ^^^

warning: `browser` 
(bin 
"test_tokenizer") 
generated 1 warning 
(run `cargo fix --bin 
"test_tokenizer" -p 
browser` to apply 1 
suggestion)
warning: `browser` 
(bin "benchmark") 
generated 1 warning
warning: `browser` 
(bin "browser") 
generated 6 warnings 
(run `cargo fix --bin 
"browser" -p browser` 
to apply 1 suggestion)
